--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
   "description": "a library of authentication codes",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./BackEnd/src/server.js",
+    "dev" : "nodemon ./BackEnd/src/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zuri-training/TeamGorilla-Auth_wiki.git"
   },
-  "keywords": [
-    "HTML",
-    "CSS",
-    "JS",
-    "Express",
-    "Node",
-    "MongoDB"
-  ],
   "author": "TeamGorilla",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/zuri-training/TeamGorilla-Auth_wiki/issues"
   },
-  "homepage": "https://github.com/zuri-training/TeamGorilla-Auth_wiki#readme"
+  "homepage": "https://github.com/zuri-training/TeamGorilla-Auth_wiki#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
