--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node ./BackEnd/src/server.js",
-    "dev" : "nodemon ./BackEnd/src/server.js"
+    "dev": "nodemon ./BackEnd/src/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,18 @@
   "homepage": "https://github.com/zuri-training/TeamGorilla-Auth_wiki#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
