wrote the basic structure for my code

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.1",
     "@types/bcrypt": "^5.0.0",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
