auth module done pending test

--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,8 +4,7 @@
   "description": "a library of authentication codes",
   "main": "server.js",
   "scripts": {
-    "start": "node ./BackEnd/src/server.js",
-    "dev": "nodemon ./BackEnd/src/server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,14 +18,18 @@
   "homepage": "https://github.com/zuri-training/TeamGorilla-Auth_wiki#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.0.1",
