--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,8 @@
   "description": "a library of authentication codes",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
